--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,190 @@
-h1 {
-    color: red  
+body {
+    max-width: 800px;
+    /* max-width: 100%; */
+    margin: auto;
+    line-height: 1.5em;
+    color: #555;
+    /* border-left: 1px solid #ddd; */
+    margin-top: 2em;
+    padding-left: 2em;
+    /* border-right: 1px solid #ddd; */
+    padding-right: 2em;
+    font-family: "Helvetica", "Arial", sans-serif;
+}
+
+h1,
+h2,
+strong {
+    color: #333;
+    margin-top: 0px;
+}
+
+
+/* Table of Contents, if wanted, add to yaml:
+output:
+blogdown::html_page:
+toc: true
+*/
+
+#TableOfContents,
+#TOC {
+    border: 1px solid #eee;
+    border-radius: 5px;
+}
+
+
+/* Header and Footer */
+
+.menu li {
+    display: inline-block;
+}
+
+.article-meta,
+.menu a {
+    text-decoration: none;
+}
+
+.terms {
+    font-size: .9em;
+}
+
+
+/* .menu, .article-meta, footer { text-align: center; } */
+
+.title {
+    font-size: 1em;
+    line-height: 1.1em;
+    /* margin-top: 1em; */
+}
+
+footer a {
+    text-decoration: none;
+}
+
+.pull-left {
+    float: left;
+    padding: 0px 16px 0px 0px;
+}
+
+.pull-right {
+    float: right;
+    padding: 0px 0px 0px 16px;
+}
+
+a {
+    color: #009900;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
+/* Code Boxes */
+
+pre {
+    border: 1px solid #ddd;
+    /* box-shadow: 5px 5px 5px #eee; */
+    background: #f8f8f8;
+    padding: 1em;
+    overflow-x: auto;
+}
+
+code {
+    background: #f9f9f9;
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size: 85%;
+}
+
+pre code {
+    background: none;
+}
+
+
+/* Images, tables, misc. */
+
+img,
+iframe,
+video {
+    max-width: 100%;
+}
+
+main {
+    hyphens: auto;
+}
+
+blockquote {
+    background: #f9f9f9;
+    border-left: 5px solid #ccc;
+    padding: 3px 1em 3px;
+}
+
+table {
+    margin: auto;
+    border-top: 1px solid #666;
+    border-bottom: 1px solid #666;
+}
+
+table thead th {
+    border-bottom: 1px solid #ddd;
+}
+
+th,
+td {
+    padding: 5px;
+}
+
+tr:nth-child(even) {
+    background: #eee
+}
+
+header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+header li {
+    float: left;
+}
+
+header li a {
+    display: block;
+    color: #333;
+    text-align: center;
+    color: #009900;
+}
+
+.content *>li {
+    list-style-type: square;
+}
+
+.articles {
+    padding: 0;
+    margin-top: -10px;
+}
+
+.articles>li {
+    list-style-type: none;
+}
+
+#disqus_thread {
+    margin: auto;
+}
+
+.number,
+.date,
+.terms {
+    color: gray;
+}
+
+.contacts {
+    font-size: 24px;
+    line-height: 1.5em;
+}
+
+.contacts *>li {
+    list-style-type: none;
 }
