--- a/data/static/main.css
+++ b/data/static/main.css
@@ -4,12 +4,12 @@ body {
     margin: auto;
     line-height: 1.5em;
     color: #555;
-    /* border-left: 1px solid #ddd; */
+    border-left: 1px solid #eee;
     margin-top: 2em;
     padding-left: 2em;
-    /* border-right: 1px solid #ddd; */
+    border-right: 1px solid #eee;
     padding-right: 2em;
-    font-family: "Helvetica", "Arial", sans-serif;
+    font-family: sans-serif, "Helvetica", "Arial", sans-serif;
 }
 
 h1,
