--- a/data/static/main.css
+++ b/data/static/main.css
@@ -10,7 +10,7 @@ body {
     padding-right: 2em;
     font-family: sans-serif, "Helvetica", "Arial", sans-serif;
     font-size: 1.2em;
-    text-align: justify;
+    /*text-align: justify;*/
     color: #333333;
 }
 
